Per project notification settings now detect if a specific handler is not configured for that user, and become ghosted out if so. Added BUILD_STARTED notification. Fixed small PHP warning in the logs with special tasks view output, when there was a building error that didn't allow a special task to complete. User notifications are now properly updated, if a given handler is removed from the system. It was only happening for new handlers being added. Serious issue with the integration builder marked a build as successful in case a fatal error occurred in a specific task and the accumulated builder outcome was success, at that point. Small layout tweaks on the notification views. Added friendly message for sniffer special task output not present.

--- a/www/css/global.css
+++ b/www/css/global.css
@@ -2,6 +2,8 @@
 	http://cintient/css/global.css
 	http://cintient/project/css/global.css
 	http://cintient/project/history/css/global.css
+	http://cintient/settings/css/global.css
+	http://cintient/project/edit/css/global.css
 */
 
 /*
@@ -1010,6 +1012,21 @@ button.inactive
   clear: both;
 }
 
+#projectEditNotifications td
+{
+  padding: 4px 2px 6px 2px;
+}
+
+#projectEditNotifications .checkboxContainer
+{
+  text-align: center;
+}
+
+#projectEditNotifications th
+{
+  text-decoration: underline;
+}
+
 /* @end */
 
 
@@ -1587,6 +1604,12 @@ article#project .avatar
 {
   /* Because no matter what I can't make the li that owns this, respect its own CSS */
   margin-bottom: 60px;
+}
+
+#notificationsPane .title
+{
+  font-size: 14pt;
+  margin-bottom: 10px;
 }
 
 /* @end */
