Fixed wrong checkout call when project was in unbuilt state. With the Git connector a git clone would error out at this stage. Git preliminary support. It still does not support specifying a working branch and it still has a few problems.

--- a/www/css/global.css
+++ b/www/css/global.css
@@ -4,6 +4,7 @@
 	http://cintient/project/history/css/global.css
 	http://cintient/settings/css/global.css
 	http://cintient/project/edit/css/global.css
+	http://cintient/dashboard/css/global.css
 */
 
 /*
@@ -669,7 +670,7 @@ button.inactive
 .projectDetails
 {
   float: left;
-  width: 260px;
+  width: 290px;
 }
 
 .projectTitle
