--- a/www/css/lib/avataruploader.css
+++ b/www/css/lib/avataruploader.css
@@ -7,7 +7,7 @@
 {
   width: 40px;
   height: 40px;
-  border: 1px solid #eee;
+  border: 1px solid rgb(0, 105, 214); /* matamouros: taken from Bootstrap */
           box-shadow: 1px 1px 1px #aaa;
      -moz-box-shadow: #888 1px 1px 1px;
   -webkit-box-shadow: #888 1px 1px 1px;
@@ -19,10 +19,10 @@
 .qq-upload-button-hover
 {
 	cursor: pointer;
-	border: 1px solid rgba(82, 168, 236, 0.8);
-          box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);
+	border: 1px solid rgba(0, 67, 138, 0.8); /* matamouros: taken from Bootstrap */
+  /*        box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);
      -moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);
-  -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);
+  -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);*/
 }
 /*.qq-upload-button-focus {outline:1px dotted black;}*/
 
