--- a/www/css/new.css
+++ b/www/css/new.css
@@ -4,6 +4,7 @@
 	http://cintient/project/new/css/new.css
 	http://cintient/project/css/new.css
 	http://cintient/settings/css/new.css
+	http://cintient/project/history/css/new.css
 */
 
 /* @group Top Bar */
@@ -137,7 +138,6 @@
 
 /* @group Defaults */
 
-/* Override some defaults */
 html, body
 {
   background-color: #eee;
@@ -153,9 +153,8 @@ body
   text-align: center; /* center align it with the container */
 }
 
-/* The white background content wrapper */
-.content
-{
+
+.content { /* The white background content wrapper */
   background-color: #fff;
   padding: 20px;
   margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
@@ -167,9 +166,7 @@ body
           box-shadow: 0 1px 2px rgba(0,0,0,.15);
 }
       
-/* Page header tweaks */
-.page-header
-{
+.page-header { /* Page header tweaks */
   background-color: #f5f5f5;
   padding: 20px 20px 10px;
   margin: -20px -20px 20px;
@@ -214,6 +211,11 @@ body
   -webkit-transition: all 0.15s ease-in-out;
   min-height: 111px; /* Try to give all projects an even height */
   padding-bottom: 10px;
+}
+
+#dashboard li.project a
+{
+  color: inherit;
 }
 
 #dashboard li.project:not(:last-child)
@@ -266,11 +268,6 @@ body
   margin-top: 3px;
 }
 
-#dashboard a.projectLink
-{
-  color: inherit;
-}
-
 #dashboard h3.projectTitle
 {
   float: none;
@@ -302,12 +299,42 @@ body
 
 /* @end */
 
-/* @group Project */
+/* @group Project build history */
 
-#project .projectAvatar40x40
+#projectBuildHistory .projectAvatar40x40
 {
   float: left;
   margin-right: 14px;
+}
+
+#projectBuildHistory #junitReport .chart
+{
+  margin-left: 110px;
+  margin-bottom: 20px;
+}
+
+#projectBuildHistory #quality .chart
+{
+  margin-left: 30px;
+  margin-bottom: 20px;
+}
+
+#projectBuildHistory #quality
+{
+  margin-left: 40px;
+}
+
+#projectBuildHistory iframe
+{
+  border: 0px;
+  padding: 4px;
+  border: 1px solid #DDD;
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
+     -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
+          box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 
 /* @end */
@@ -341,9 +368,7 @@ body
   background-color: #eee; /* nice fill color while images don't load up */
 }
 
-/* These properties are taken from Bootstrap's ul.media-grid li a */
-.chart
-{
+.chart { /* These properties are taken from Bootstrap's ul.media-grid li a */
   float: left;
   padding: 4px;
   border: 1px solid #DDD;
@@ -353,4 +378,25 @@ body
   -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
      -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
           box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+
+.log { /* Based on the log view on Travis-ci.org */
+  clear: left;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  line-height: 1.4em;
+  font-size: 9pt;
+  text-shadow: black 1px 1px 1px;
+  margin: 25px 20px 10px 20px;
+  padding: 10px;
+  font-family: "Anonymous Pro", "Andale Mono", monospace;
+  font-weight: normal;
+  color: #eee;
+  background-color: #303030;
+     -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+       -o-border-radius: 4px;
+      -ms-border-radius: 4px;
+   -khtml-border-radius: 4px;
+          border-radius: 4px;
 }
