Fixed tab-content divs class naming (was using pill-content and Firefox was going nuts about specifically the project edit page - don't really know why). Cleaned up a bunch of CSS and JS includes. In the process found out that the jQuery UI JS include must come before the Bootstrap Tabs JS include, or else tabs will simply (and very silently) not work. Fixed a bunch of single inputs not being closed, in the project edit page. Probably more in other forms. Fixed project log table positioning for Firefox, in the Dashboard.

--- a/www/css/new.css
+++ b/www/css/new.css
@@ -319,11 +319,11 @@ body
 {
   background-color: rgb(255,40,0);
 }
-/*
-#dashboard .media-grid
+
+#dashboard #log table
 {
-  margin-top: 20px;
-}*/
+  float: left;
+}
 
 /* @end */
 
