Project logs now feature the user that generated them or "system" in case of none. Dates in the dashboard project log changed as an easy fix to allow proper sorting by Tablesorter.js. Also included seconds in the time.

--- a/www/css/new.css
+++ b/www/css/new.css
@@ -461,6 +461,11 @@ user-select: none;
   padding-left: 15px;
 }
 
+#projectEdit #delete form li label
+{
+  cursor: pointer;
+}
+
 #projectEdit #notifications form .input
 {
   margin-left: 0px;
