--- a/www/css/new.css
+++ b/www/css/new.css
@@ -614,6 +614,69 @@ user-select: none;
 
 }
 */
+
+#projectEdit #builderElementsChosen .builderElement
+{
+  display: inline;
+  position: relative;
+}
+
+#projectEdit #builderElementsChosen > ul
+{
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+#projectEdit #builderElementsChosen > ul > li
+{
+  margin-bottom: 0px;
+  margin-top: 0px;
+  padding-top: 0px;
+}
+
+#projectEdit #builderElementsChosen .builderElement .inner
+{
+  width: 376px;
+}
+
+#projectEdit #builderElementsChosen .builderElement .form-stacked
+{
+  padding-left: 4px;
+  padding-bottom: 0px;
+}
+
+#projectEdit #builderElementsChosen .builderElement .title h3
+{
+  float: left;
+}
+#projectEdit #builderElementsChosen .builderElement .title
+{
+  cursor: pointer;
+   -webkit-border-bottom-left-radius : 4px;
+  -webkit-border-bottom-right-radius : 4px;
+       -moz-border-radius-bottomleft : 4px;
+      -moz-border-radius-bottomright : 4px;
+           border-bottom-left-radius : 4px;
+          border-bottom-right-radius : 4px;
+}
+#projectEdit #builderElementsChosen .builderElement .title .builderElementActionItems
+{
+  float: right;
+  margin-top: -21px;
+  margin-right: -13px;
+}
+
+#projectEdit #builderElementsChosen .builderElement .title .builderElementActionItems a.submit
+{
+  display: none;
+}
+
+#projectEdit #builderElementsChosen .builderElement .content
+{
+  display: none;
+  padding-bottom: 4px;
+}
+
 /* @end */
 
 
